objects/AB_Testing__c.object
<CustomObject>
    <fields>
        <fullName>A_B_Variant__c</fullName>
        <label>A_B_Variant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Id</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>AB Testings</relationshipLabel>
        <relationshipName>AB_Testings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Page__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Next Page</label>
        <type>Checkbox</type>
    </fields>
    <label>AB Testing</label>
    <nameField>
        <displayFormat>Consent-{0000}</displayFormat>
        <label>AB Testing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AB Testings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>